Remise comme avant

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>🔑 Générateur de Passphrase</h1>
-  <p>test.</p>
+  <p>Obtenez une passphrase sécurisée en un clic.</p>
   <div id="passphrase">Cliquez sur "Générer"</div>
   <label for="length">Nombre de mots :</label>
   <input type="number" id="length" min="1" max="10" value="4">
