Ajout fonction historique

--- a/popup.html
+++ b/popup.html
@@ -35,8 +35,13 @@
     </div>
 
     <button id="generate">✨ Générer</button>
+    <button id="show-history">📜 Historique</button>
     <div id="passphrase">Cliquez sur "Générer"</div>
     <div id="notification"></div>
+    <div id="history" style="display:none;">
+      <h2>Historique des 10 derniers</h2>
+      <ul id="history-list"></ul>
+    </div>
   </div>
 
   <script src="popup.js"></script>
