ajout extension id

--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
     <div id="passphrase">Cliquez sur "Générer"</div>
     <div id="notification"></div>
     <div id="history" style="display:none;">
-      <h2>Historique des 10 derniers</h2>
+      <h2>Historique (10 Derniers)</h2>
       <ul id="history-list"></ul>
     </div>
   </div>
